[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "convmag"
description = "conversion between units used in magnetism"
authors = [{name = "Thomas G. Woodcock"},]
license = {file = "LICENSE"}

classifiers=[
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Development Status :: 4 - Beta',
    'Intended Audience :: End Users/Desktop',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Topic :: Scientific/Engineering',
    'Topic :: Scientific/Engineering :: Physics',
    'Topic :: Utilities',
]
keywords = ["python", "conversion", "units", "magnetism", "magnetic"]
requires-python = ">=3.6"
dynamic = ["version"]

[project.readme]
'file' = "README.md"
'content-type' = "text/markdown"

[project.urls]
'Source' = 'https://github.com/tgwoodcock/convmag.git'
'Bug Tracker' = 'https://github.com/tgwoodcock/convmag.git/issues'

[project.scripts]
convmag = "convmag.main:main"

[tool.setuptools.dynamic]
version = {attr = "convmag.__version__"}