[metadata]
name = convmag
version = 0.0.1
author = tgwoodcock
description = conversion between units used in magnetism
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/tgwoodcock/convmag
project_urls =
    Bug Tracker = https://github.com/tgwoodcock/convmag/issues
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    convmag = convmag.main:main